# rodsim

./: CMakeLists.txt  README.md
src/: assembly.cpp  assembly.hpp  event.cpp  event.hpp  main.cpp  polyomino.hpp  stochastic.cpp  stochastic.hpp
